--- a/_config.yml
+++ b/_config.yml
@@ -110,7 +110,7 @@ author:
   name             : "Aida Najafi"
   avatar           : "/assets/images/001 (2).jpg"
   bio              : Im a university student majoring in computer engineering at IUST. The easiest way to contact me is via email.
-  location         : "تهران"
+  location         : "البرز"
   email            : anmirak81@gmail.com
   twitter: 
   linkedin: 
